k8s/app_deployment.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: stress-relief-app
  namespace: stress-relief

spec:
  replicas: 1

  selector:
    matchLabels:
      app: stress-relief-app

  template:
    metadata:
      labels:
        app: stress-relief-app

    spec:
      containers:
        - name: stress-relief-app

          image: stress-relief-app:1.0

          imagePullPolicy: IfNotPresent

          ports:
            - containerPort: 3000
