k8s/mysql-statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet

metadata:
  name: mysql
  namespace: stress-relief

spec:
  serviceName: mysql
  replicas: 2

  selector:
    matchLabels:
      app: mysql

  template:
    metadata:
      labels:
        app: mysql

    spec:
      tolerations:
        - key: "dedicated"
          operator: "Equal"
          value: "database"
          effect: "NoSchedule"

      containers:
        - name: mysql
          image: mysql:8.0

          ports:
            - containerPort: 3306

          volumeMounts:
            - name: mysql-storage
              mountPath: /var/lib/mysql

            - name: mysql-init
              mountPath: /docker-entrypoint-initdb.d
              readOnly: true

      volumes:
        - name: mysql-init
          configMap:
            name: mysql-initdb

  volumeClaimTemplates:
    - metadata:
        name: mysql-storage

      spec:
        accessModes:
          - ReadWriteOnce

        resources:
          requests:
            storage: 5Gi
