k8s/app_service.yaml
apiVersion: v1
kind: Service

metadata:
  name: stress-relief-service
  namespace: stress-relief

spec:
  selector:
    app: stress-relief-app

  ports:
    - port: 3000
      targetPort: 3000

  type: NodePort
