k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress

metadata:
  name: stress-relief-ingress
  namespace: stress-relief

spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix

            backend:
              service:
                name: stress-relief-service
                port:
                  number: 3000
